@@ -36,6 +36,7 @@ clojure -A:deps -T:build help/doc"
    "clj-otel-exporter-logging"
    "clj-otel-exporter-logging-otlp"
    "clj-otel-exporter-otlp"
+   "clj-otel-exporter-prometheus"
    "clj-otel-exporter-zipkin"
    "clj-otel-instrumentation-resources"
    "clj-otel-instrumentation-runtime-telemetry-java8"
